学长的版本

--- a/anybuy/account/templates/success.html
+++ b/anybuy/account/templates/success.html
@@ -2,5 +2,5 @@
 {% block title %}Succeed{% endblock %}
 
 {% block content %}
-    <h1>Congratulations, {{UserName}},You make it!</h1>
+    <h1>Dear {{UserName}},you commit a modification!</h1>
 {% endblock %}
