--- a/anybuy/base_template/css/foot.css
+++ b/anybuy/base_template/css/foot.css
@@ -28,7 +28,7 @@
     border-bottom: none;
 }
 .menu-widget li a{
-    color: #CF9;
+    color: #706670;
 }.menu-widget li a:hover{
      color: #FFF;
      cursor: pointer;
