--- a/anybuy/store/templates/manageOrder.html
+++ b/anybuy/store/templates/manageOrder.html
@@ -7,7 +7,7 @@
 <link href="/base_template/css/foot.css" rel="stylesheet">
 
 <div class="container">
-	<h2 style="color: #3a87ad;">Manage Order</h2>
+	<h2>Manage Order</h2>
 	<hr>
 	<table id="order" class="table table-hover table-condensed">
 		<thead>
@@ -151,7 +151,5 @@
         {% endif %}
 		{% endfor %}
 	</table>
-     <br /> <br /> <br /> <br /> <br /> <br /> <br />
-      <br /> <br /> <br /> <br /> <br /> <br /> <br />  <br />
 </div>
 {% endblock %}
