--- a/anybuy/account/templates/Seller_ManageAD.html
+++ b/anybuy/account/templates/Seller_ManageAD.html
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="#" style="color:#FFF">My Shops </a>
+							<a href="#">My Shops</a>
 						</li>
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
