--- a/anybuy/store/templates/Customer_MyCart.html
+++ b/anybuy/store/templates/Customer_MyCart.html
@@ -79,7 +79,7 @@
 							<td id="subtotal{{ cart.CommodityID.id }}" data-th="Subtotal" class="text-center">{% widthratio cart.CommodityID.SellPrice 1 cart.CartCommodityAmount %}$</td>
 							<td class="actions" data-th="">
 								<!--<button class="btn btn-info btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>-->
-								<button onclick="rmfromcart('{{ cart.CommodityID.id }}')" class="btn btn-danger btn-sm"><img src = "/file/image/trash_stroke_32x32.png" style = "width:20px; height:20px"/></button>
+								<button onclick="rmfromcart('{{ cart.CommodityID.id }}')" class="btn btn-danger btn-sm"><img src = "/file/images/delete.png" style = "width:20px; height:20px"/></button>
 							</td>
 							<td>
 								<!--<input type=checkbox checked="true">-->
@@ -93,8 +93,7 @@
 							<td id="total" class="hidden-xs text-center"><strong>Total {{ total }}$</strong></td>
 							<td class="actions" data-th="">
 								<!--<button class="btn btn-info btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>-->
-								<button class="btn btn-danger btn-sm" style="background-color:#06C"><img src = "/file/image/trash_stroke_32x32.png" style = "width:20px; height:20px" />
-                                </button>
+								<button class="btn btn-danger btn-sm" ><img src = "/file/images/delete.png" style = "width:20px; height:20px"/></button>
 							</td>
 							<td>
 								<!--<input type=checkbox checked="true">-->
@@ -106,7 +105,5 @@
 						</tr>
 					</tfoot>
 	</table>
-    <br /> <br /> <br /> <br /> <br /> <br /> <br /><br /> <br /> <br />
-    
 </div>
 {% endblock %}
