--- a/anybuy/account/templates/register.html
+++ b/anybuy/account/templates/register.html
@@ -4,29 +4,97 @@
 {% block content %}
 
 <div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<div class="row clearfix">
-            <div class="col-md-4 column">
-            </div>
-				<div class="col-md-4 column">
-                    <h2 class="text-center text-default" style="color:#3a87ad">
-                    Register here:
-                    </h2>
-                    {% if duplicate %}
-                        <p style="color: red">This account is used! Choose another one.</p>
-                    {% endif %}
-                    <form method = 'post' enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{cf.as_p}}
-                    <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button></div>
-                    </form>
+<div class="row clearfix">
+    <div class="col-md-12 column">
+        <div class="tabbable" id="tabs-890436">
+            
+            <div class="tab-content">
+                <div class="tab-pane active" id="panel-849926">
+                    <div class="container">
+                        <div class="row clearfix">
+                            <div class="col-md-12 column">
+                                <div class="row clearfix">
+                                    <div class="col-md-12 column">
+                                        <h1  class="text-center text-success" style="color:#3a87ad"> <strong>Shopping Mall Seller System</strong>
+                                        </h1>
+                                        <h3  class="text-center text-default" style="color:#3a87ad">
+                                            <strong>Register</strong>
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row clearfix">
+                            <div class="col-md-3 column"></div>
+                            <div class="col-md-6 column">
+                            {% if duplicate %}
+                                    <p style="color: red">This account is used! Choose another one.</p>
+                                {% endif %}
+                                <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                
+                                    
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">Account</label>
+                                        <div class="col-sm-10">
+                                            <input type="radio" name="identity" value="C" checked="checked">&nbsp;&nbsp;Customer
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <input type="radio" name="identity" value="S">&nbsp;&nbsp;Seller
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerAccount" class="col-sm-2 control-label">Account</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="CustomerAccount" id="id_CustomerAccount" placeholder="Account"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerName" class="col-sm-2 control-label">Realname</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="CustomerName" id="id_CustomerName" placeholder="Realname"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerPassword" class="col-sm-2 control-label">Password</label>
+                                        <div class="col-sm-10">
+                                            <input type="password" class="form-control" id="id_CustomerPassword" name="CustomerPassword" placeholder="Password"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerPassword2" class="col-sm-2 control-label">Repassword</label>
+                                        <div class="col-sm-10">
+                                            <input type="password" class="form-control" name="CustomerPassword2" id="id_CustomerPassword2" placeholder="RePassword"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerTelephone" class="col-sm-2 control-label">User Tel.</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="CustomerTelephone" id="id_CustomerTelephone" placeholder="User Tel."></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerEmail" class="col-sm-2 control-label">Email</label>
+                                        <div class="col-sm-10">
+                                            <input type="email" class="form-control" id="id_CustomerEmail" name="CustomerEmail" placeholder="Email Address"></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_CustomerAddress" class="col-sm-2 control-label">UserAdd.</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="CustomerAddress" id="id_CustomerAddress" placeholder="User Add."></div>
+                                    </div>
+                                    
+                                    
+                                    <div class="form-group">
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-primary">Register</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-3 column"></div>
+                        </div>
+                    </div>
                 </div>
+                
             </div>
         </div>
     </div>
 </div>
-    <br><br><br>
+</div>
 
 {% endblock %}
