--- a/anybuy/account/templates/login.html
+++ b/anybuy/account/templates/login.html
@@ -3,34 +3,61 @@
 
 
 {% block content %}
-
 <div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<div class="row clearfix">
-            <div class="col-md-4 column">
-            </div>
-				<div class="col-md-4 column"> <br>
-                    <h2 class="text-center text-default" style="color:#3a87ad">
-                    Please Login
-                    </h2>
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div class="row clearfix">
+                <div class="col-md-3 column"></div>
+                <div class="col-md-6 column">
+                    <br>
+                    <h2 class="text-center text-default" style="color:#3a87ad">Please Login</h2>
                     {% if wrongpw %}
                     Wrong account or password!
                     {% endif %}
                     <div class="text-center">
-                    <form method = 'post' enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{uf.as_p}}
-                        <div class="text-center">
-                        <button type="submit" class="btn btn-primary ">Login</button>
-                        </div>
-                    </form>
-                    No account? <a href="/register/">Register</a>
+                        <form class="form-horizontal" method = 'post' enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                        <label class="col-sm-2 control-label">Account</label>
+                                        <div class="col-sm-5">
+                                            <input type="radio" name="identity" value="C" checked="checked">&nbsp;&nbsp;Customer
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <input type="radio" name="identity" value="S">&nbsp;&nbsp;Seller
+                                        </div>
+                                    </div>
+                            <div class="form-group">
+                                <label for="id_UserAccount" class="col-sm-2 control-label">Account</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="id_UserAccount" name="UserAccount" placeholder="User Account"></div>
+                            </div>
+                            <div class="form-group">
+                                <label for="id_UserPassword" class="col-sm-2 control-label">Password</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" name="UserPassword" id="id_UserPassword" placeholder="User Password">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-8"></div>
+                                <div class="col-sm-4">
+                                    <p style="color:#3a87ad"><a>forget your password?</a></p>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary ">Login</button>
+                            </div>
+                        </form>
+                        No account?
+                        <a href="/register/">Register</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    <br><br><br> <br><br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock %}
