--- a/anybuy/store/templates/addshop.html
+++ b/anybuy/store/templates/addshop.html
@@ -2,26 +2,58 @@
 {% block title %}First Shop{% endblock %}
 
 {% block content %}
-
 <div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<div class="row clearfix">
-            <div class="col-md-4 column">
-            </div>
-				<div class="col-md-4 column">
-                    <h3>Add your First Shop</h3>
-    <hr>
-<form method = 'post' enctype="multipart/form-data">
-{% csrf_token %}
-{{sf.as_p}}
-<input type="submit" value = "Save" />
-</form>
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div class="row clearfix">
+                <div class="col-md-3 column"></div>
+                <div class="col-md-4 column">
+                    <form method = 'post' enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="container">
+                            <div class="row clearfix">
+                                <div class="col-md-12 column" style="color:#3a87ad">
+                                    <h3>Apply for a shop</h3>
+                                    <hr class="col-md-2"></div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-6 column">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label for="id_ShopName">*Shop name</label>
+                                            <input class="form-control" id="id_ShopName" name="ShopName" type="text" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="id_ShopDescription">Shop Description</label>
+                                            <input class="form-control" id="id_ShopDescription" name="ShopDescription" type="text" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="id_ShopImage">Big picture</label>
+                                            <input id="id_BigImage" name="BigImage" type="file" />
+                                            <p class="help-block">Photo of your store.</p>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="id_ShopImage">Shop picture</label>
+                                            <input id="id_ShopImage" name="ShopImage" type="file" />
+                                            <p class="help-block">Big Photo of your store.</p>
+                                        </div>
+
+                                        <div>
+                                            <button class="btn btn-primary" type="submit">Submit</button>
+                                        </div>
+
+                                    </form>
+                                </div>
+                                <div class="col-md-6 column"></div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    <br><br><br>
-
+<br>
+<br>
+<br>
 {% endblock %}
