Fix Commodity types

--- a/anybuy/store/templates/manageCommodity.html
+++ b/anybuy/store/templates/manageCommodity.html
@@ -34,15 +34,15 @@
 		<div class="form-group">
 			<label for="id_CommodityType">Type:</label>
 			<select class="form-control span1" data-style="btn-primary" id="id_CommodityType" name="CommodityType">
-				<option value="C">Clothing</option>
-				<option value="A">Accessory</option>
-				<option value="S">Sport</option>
-				<option value="J">Jewelry</option>
-				<option value="D">Digit</option>
-				<option value="H">Household appliances</option>
-				<option value="M">Makeup</option>
-				<option value="F">Food</option>
-				<option value="E">Entertainment</option>
+				<option value="TH">TV & Home Theater</option>
+				<option value="CT">Computers & Tablets</option>
+				<option value="C">Cell Phones</option>
+				<option value="CC">Cameras & Camcorders</option>
+				<option value="A">Audio</option>
+				<option value="CG">Car Electronics & GPS</option>
+				<option value="VM">Video,Games,Movies & Music</option>
+				<option value="HS">Health,Fitness & Sports</option>
+				<option value="HO">Home & Office</option>
 				<option value="O">Others</option>
 			</select>
 		</div>
