--- a/anybuy/account/templates/Seller_ManageAD.html
+++ b/anybuy/account/templates/Seller_ManageAD.html
@@ -213,7 +213,7 @@
             <div class="col-md-4 column ui-sortable" style="">	
                 <h4 style = "color:#4491E4">Contact Form</h4>
 
-                <form id="contact" class="form-horizontal" method="post" />
+                <form id="contact" class="form-horizontal" method="post" >
                     <div class="control-group">
                         <label class="control-label" for="inputName">Name</label>
 
