--- a/anybuy/store/templates/Customer_BuyHistory.html
+++ b/anybuy/store/templates/Customer_BuyHistory.html
@@ -84,7 +84,7 @@
 				</tr>
 				{% endfor %}				
 			</table>
-			<b>Total Value: {{totalvalue}}$	<b>
+			<b>Total Value: {{totalvalue}}$	</b>
 			<br>
 			<br>
 		</div>
