--- a/anybuy/store/templates/addshop.html
+++ b/anybuy/store/templates/addshop.html
@@ -28,14 +28,14 @@
                                             <input class="form-control" id="id_ShopDescription" name="ShopDescription" type="text" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="id_ShopImage">Big picture</label>
+                                            <label for="id_ShopImage">Shop picture</label>
                                             <input id="id_BigImage" name="BigImage" type="file" />
                                             <p class="help-block">Photo of your store.</p>
                                         </div>
                                         <div class="form-group">
-                                            <label for="id_ShopImage">Shop picture</label>
+                                            <label for="id_ShopImage">Your Photo</label>
                                             <input id="id_ShopImage" name="ShopImage" type="file" />
-                                            <p class="help-block">Big Photo of your store.</p>
+                                            <p class="help-block">Your Photo</p>
                                         </div>
 
                                         <div>
