--- a/anybuy/store/templates/manageCommodity.html
+++ b/anybuy/store/templates/manageCommodity.html
@@ -9,19 +9,19 @@
 		{% csrf_token %}
 		<div class="form-group">
 			<label for="id_CommodityName">Commodity Name:</label>
-			<input class="form-control" name="CommodityName" id="id_CommodityName" type="text" />
+			<input class="form-control" name="CommodityName" id="id_CommodityName" type="text" placeholder="CommodityName" />
 		</div>
 		<div class="form-group">
 			<label for="id_CommodityDescription">Description:</label>
-			<input class="form-control" name="CommodityDescription" id="id_CommodityDescription" type="text" />
+			<input class="form-control" name="CommodityDescription" id="id_CommodityDescription" type="text" placeholder="Description" />
 		</div>
 		<div class="form-group">
 			<label for="id_CommodityAmount">Amount:</label>
-			<input class="form-control" name="CommodityAmount" id="id_CommodityAmount" type="text" />
+			<input class="form-control" name="CommodityAmount" id="id_CommodityAmount" type="text" placeholder="Amount" />
 		</div>
 		<div class="form-group">
 			<label for="id_SoldAmount">Sold Amount:</label>
-			<input class="form-control" id="id_SoldAmount" name="SoldAmount" type="text" />
+			<input class="form-control" id="id_SoldAmount" name="SoldAmount" type="text" placeholder="Sold Amount" />
 		</div>
 		<div class="form-group">
 			<label for="id_PurchasePrice">Purchase Price:</label>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="form-group">
 			<label for="id_SellPrice">Sell Price:</label>
-			<input class="form-control" id="id_SellPrice" name="SellPrice" type="text" />
+			<input class="form-control" id="id_SellPrice" name="SellPrice" type="text" placeholder="Sell Pirce" />
 		</div>
 		<div class="form-group">
 			<label for="id_CommodityType">Type:</label>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="form-group">
 			<label for="id_CommodityDiscount">Discount:</label>
-			<input class="form-control" id="id_CommodityDiscount" name="CommodityDiscount" type="text" />
+			<input class="form-control" id="id_CommodityDiscount" name="CommodityDiscount" type="text"  placeholder="Discount" />
 		</div>
 		<div class="form-group">
 			<input id="id_IsAdv" name="IsAdv" type="checkbox" />
