--- a/anybuy/account/templates/Homepage.html
+++ b/anybuy/account/templates/Homepage.html
@@ -60,7 +60,7 @@
 	</div>
 	<div class="row clearfix">
 		<div class="col-md-10 column mycenter">
-			<div class="carousel slide " id="carousel-449960">
+			<div class="carousel slide" id="carousel-449960" >
 				<ol class="carousel-indicators">
 					<li class="active" data-slide-to="0" data-target="#carousel-449960">
 					</li>
@@ -69,9 +69,9 @@
 					<li data-slide-to="2" data-target="#carousel-449960">
 					</li>
 				</ol>
-				<div id="carousel" class="carousel-inner">   
+				<div id="carousel" class="carousel-inner" style="height:300px">   
 					<div class="item active">      <!--网站介绍1-->
-						<img alt="" src="/file/image/14.jpeg" >
+						<img alt="" src="/file/image/14.jpg" style="height:300px;" >
 						<div class="carousel-caption">
 							<h4>
 							</h4>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="item">             <!--网站介绍2-->
-						<img alt="" src="/file/image/15.jpg">
+						<img alt="" src="/file/image/15.jpg" style="height:300px;">
 						<div class="carousel-caption">
 							<h4>
 							</h4>
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 					<div class="item">              <!--网站介绍3-->
-						<img alt="" src="/file/image/16.jpg">
+						<img alt="" src="/file/image/16.jpg" style="height:300px;">
 						<div class="carousel-caption">
 							<h4>
 							</h4>
@@ -97,7 +97,7 @@
 							</p>
 						</div>
 					</div>
-				</div> <a class="left carousel-control" href="#carousel-449960" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-449960" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+				</div> <a class="left carousel-control" href="#carousel-449960" data-slide="prev"><span class="glyphicon"></span></a> <a class="right carousel-control" href="#carousel-449960" data-slide="next"><span class="glyphicon"></span></a>
 			</div>
 		</div>
 	</div>
