--- a/anybuy/account/templates/Seller_ReturnAndRefund.html
+++ b/anybuy/account/templates/Seller_ReturnAndRefund.html
@@ -91,9 +91,9 @@
 							Tel:{{ order.CustomerOrderID.CustomerID.CustomerTelephone}}<br>
 							Email:{{ order.CustomerOrderID.CustomerID.CustomerEmail}}<br>
 							Addr:{{ order.CustomerOrderID.CustomerID.CustomerAddress }}</td>
-						<td class="text-center"><a class='btn btn-info btn-xs' onclick="success('{{order.id}}')"><span class="glyphicon"><b>Accept</b>
+							<td class="text-center"><a class='btn btn-info btn-xs' onclick="success('{{order.id}}')"><span class="glyphicon"><b>Accept</b></span></a>
 						</td>
-						<td class="text-center"><a class='btn btn-info btn-xs' onclick="failure('{{order.id}}')"><span class="glyphicon"><b>Deny</b>
+						<td class="text-center"><a class='btn btn-info btn-xs' onclick="failure('{{order.id}}')"><span class="glyphicon"><b>Deny</b></span></a>
 						</td>
 						</tr>
 						{% endfor %}
