--- a/anybuy/store/templates/Customer_EnterShop.html
+++ b/anybuy/store/templates/Customer_EnterShop.html
@@ -6,21 +6,22 @@
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<ul class="nav nav-tabs">
+			<!-- <ul class="nav nav-tabs">
 				<li class="active">
 					<a href="#">My shop</a>
 				</li>
-			</ul>
+			</ul> -->
 			<div class="carousel slide" id="carousel-112879">
 
 				<div class="carousel-inner">
 					<div class="item active">
+					<h2 class="text-primary">
+								{{ shop.ShopName }}
+							</h2>
 						<img alt="" src="/file/{{ shop.BigImage }}" />
 						<div class="carousel-caption">
-							<h4>
-								{{ shop.ShopName }}
-							</h4>
-							<p>
+							
+							<p class="text-primary">
 								{{ shop.ShopDescription }}
 							</p>
 						</div>
@@ -34,7 +35,7 @@
             </br></br></br></br></br>
  <div class="container">
 	<div class="row clearfix">
-		<div class="col-md-2 column">
+		<!-- <div class="col-md-2 column">
 			<div class="list-group">
 {#				 <a class="list-group-item active" href="#">Home</a>#}
 {#				<div class="list-group-item">#}
@@ -47,14 +48,14 @@
 {#					manage ads#}
 {#				</div> <a class="list-group-item ">Help</a>#}
 			</div>
-		</div>
+		</div> -->
 		<div class="col-md-10 column">
-        <h1>{{ shop.ShopName }}</h1>
+        <!-- <h1>{{ shop.ShopName }}</h1>
         <p>
             {{ shop.ShopDescription }}
-		</p>
+		</p> -->
 			{% for commodity in commodityList %}
-            <a href="/commodity/id/{{ commodity.id }}" style = "color:#3299CC"><img class="img-thumbnail" alt="140x140" src="/file/{{ commodity.CommodityImage }}" style = "height:270px;"/></a>
+            <a href="/commodity/id/{{ commodity.id }}" style = "color:#3299CC"><img class="img-thumbnail" alt="140x140" src="/file/{{ commodity.CommodityImage }}" style = "height:240px;width:270px;"/></a>
             {% endfor %}
 		</div>
 	</div>
@@ -89,15 +90,15 @@
 		<div class="col-md-4 column">
 		</div>
 	</div>
-    <div class="row clearfix">
-		<div class="col-md-12 column">
+    <!-- <div class="row clearfix">
+    		<div class="col-md-12 column">
         <h3 style="color:#3a87ad">
         My other shops
         </h3>
             {% for shop in shopList %}
                  <a href="/shop/id/{{ shop.id }}" style = "color:#3299CC"><img class="img-thumbnail" alt="140x140" src="/file/{{ shop.ShopImage }}" style = "height:270px;"/></a>
             {% endfor %}
-		</div>
-	</div>
+    		</div>
+    	</div> -->
 </div>
 {% endblock %}
