--- a/anybuy/store/templates/bank.html
+++ b/anybuy/store/templates/bank.html
@@ -2,70 +2,40 @@
 {% block title %}Check Out{% endblock %}
 
 {% block content %}
-<style type="text/css">
-  .ch {zoom:180%;}
-
-</style>
+<style type="text/css">.ch {zoom:180%;}</style>
 <div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<div class="row clearfix">
-            <div class="col-md-2 column">
-            </div>
-				<div class="col-md-8 column">
-                    <h3>Choose a bank</h3>
-    <hr>
-                    <div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank1.png" style="height: 40px">
-                    </div>
-                    <div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank2.png" style="height: 40px">
-                    </div>
-                    <div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank3.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank4.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank5.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank6.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank7.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank8.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank9.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input type="checkbox" class="ch">
-                    <img src="/file/images/bank10.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input class="ch" type="checkbox">
-                    <img src="/file/images/bank11.png" style="height: 40px">
-                    </div><div style="float: left">
-                    <input class="ch" type="checkbox" style="">
-                    <img src="/file/images/bank12.jpg" style="height: 40px">
-                    </div>
-                    <br><br><br>
-                </div>
-            </div>
-            <br><br><br>
+    <div class="row clearfix">
+        <div class="col-md-12 column">
             <div class="row clearfix">
+                <div class="col-md-2 column"></div>
+                <div class="col-md-8 column">
+                    <h2 style="color:#3a87ad">Choose a mode of payment</h2>
+                    <hr>
+                    <div style="float: left;margin:20px">
+                        <a href="/bankaccount">
+                            <img src="/file/images/weixin.jpg" style="height: 160px"></a>
+                    </div>
+                    <div style="float: left">
+
+                        <a href="/bankaccount">
+                            <img src="/file/images/zhifubao.jpg" style="height: 160px;margin:20px"></a>
+                    </div>
+
+                </div>
+                <br>
+                <br>
+                <br></div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="row clearfix">
             <div class="col-md-5 column"></div>
 
-            <a href="/bankaccount" class="btn btn-primary">Submit<i class="fa fa-angle-right"></i></a>
-                </div>
         </div>
     </div>
 </div>
-    <br><br><br>
-
+<br>
+<br>
+<br>
 {% endblock %}
