--- a/anybuy/store/templates/bankaccount.html
+++ b/anybuy/store/templates/bankaccount.html
@@ -2,51 +2,47 @@
 {% block title %}Check Out{% endblock %}
 
 {% block content %}
-
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<div class="row clearfix">
-            <div class="col-md-2 column">
-            </div>
+				<div class="col-md-2 column"></div>
 				<div class="col-md-8 column">
-                    <h3>Bank Account</h3>
-    <hr>
-                    <form class="form-horizontal" role="form">
+					<h3>2-D barcodes</h3>
+					<hr>
+					<form class="form-horizontal" role="form">
 
-                <div class="form-group">
-					 <label for="inputEmail3" class="col-sm-2 control-label">Bank Account</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="account" placeholder="Bank Account">
-					</div>
-				</div>
-                <div class="form-group">
-					 <label for="inputEmail3" class="col-sm-2 control-label">Bank Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="Email3" placeholder="Bank Password">
-					</div>
-				</div>
+						<div class="form-group">
+							<div class="col-md-3"></div>
+							<div class="col-md-4" style="width:300px;margin-left:12px">
+								<a href="/">
+									<img src="/file/images/weixin.png" style="height: 160px"></a>
+							</div>
+						</div>
+					
 
-                        <div class="form-group">
-                    <div class="col-md-4">
-					</div>
-					<div class="col-md-4">
-            <a href="/" class="btn btn-primary">Submit<i class="fa fa-angle-right"></i></a>
-					</div>
-                    <div class="col-md-4">
-					</div>
-				</div>
-			</form>
-                  </div>
-            <br><br><br>
-            <div class="row clearfix">
-            <div class="col-md-5 column"></div>
+					<!-- <div class="form-group">
+						<div class="col-md-4"></div>
+						<div class="col-md-4">
+							<a href="/" class="btn btn-primary">
+								Submit <i class="fa fa-angle-right"></i>
+							</a>
+						</div>
+						<div class="col-md-4"></div>
+					</div> -->
+				</form>
+			</div>
+			<br>
+			<br>
+			<br>
+			<div class="row clearfix">
+				<div class="col-md-5 column"></div>
 
-
-                </div>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
 </div>
-    <br><br><br>
-</div>
+<br>
+<br>
+<br></div>
 {% endblock %}
